--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,10 +9,16 @@ environment:
   sdk: ">=3.0.3 <4.0.0"
 
 dependencies:
+  cloud_firestore: ^4.8.2
   country_picker: ^2.0.20
   cupertino_icons: ^1.0.2
+  firebase_auth: ^4.6.3
+  firebase_core: ^2.14.0
   flutter:
     sdk: flutter
+  fluttertoast: ^8.2.2
+  page_transition: ^2.0.9
+  provider: ^6.0.5
   velocity_x: ^4.1.0
 
 dev_dependencies:
@@ -21,7 +27,6 @@ dev_dependencies:
     sdk: flutter
 
 flutter:
-
   uses-material-design: true
 
   assets:
