--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   page_transition: ^2.0.9
   persistent_bottom_nav_bar_v2: ^4.2.8
   provider: ^6.0.5
+  sizer: ^2.0.15
   velocity_x: ^4.1.0
 
 dev_dependencies:
