--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,8 +15,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_auth: ^4.6.3
   firebase_core: ^2.14.0
+  firebase_storage: ^11.2.4
   flutter:
     sdk: flutter
+  image_picker: ^1.0.0
   page_transition: ^2.0.9
   persistent_bottom_nav_bar_v2: ^4.2.8
   provider: ^6.0.5
